Shorten header from 'AI Intelligence' to 'AI'

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </header>
 
         <div class="hero" id="hero-box">
-            <h1>Statistical Precision & AI Intelligence</h1>
+            <h1>Statistical Precision & AI</h1>
             <p>
                 <strong>4cThreat</strong> fuses classical signal processing mathematics with advanced AI-driven classification.
                 We combine the reliability of deterministic statistical models with the adaptability of deep learning to provide 
