--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4cThreat Airspace Intelligence</title>
     
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 64 64%22><circle cx=%2232%22 cy=%2232%22 r=%2228%22 stroke=%22%2300ff41%22 stroke-width=%224%22 fill=%22none%22/><path d=%22M32 4v56M4 32h56%22 stroke=%22%2300ff41%22 stroke-width=%224%22/><circle cx=%2232%22 cy=%2232%22 r=%228%22 fill=%22%2300ff41%22/></svg>">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Share+Tech+Mono&display=swap" rel="stylesheet">
@@ -287,7 +289,7 @@
             max-width: 900px;
             margin-left: auto;
             margin-right: auto;
-            line-height: 1.5;
+            line-height: 1.9;
             font-family: 'Share Tech Mono', monospace;
         }
 
@@ -327,7 +329,7 @@
         .team-card::after { content: ''; position: absolute; bottom: 0; right: 0; width: 10px; height: 10px; border-bottom: 2px solid var(--safe); border-right: 2px solid var(--safe); }
 
         .role-badge {
-            font-size: 11px;
+            font-size: 12px;
             color: var(--safe);
             background: rgba(0, 255, 65, 0.05);
             padding: 5px 10px;
@@ -337,7 +339,7 @@
             text-transform: uppercase;
         }
 
-        .member-name { font-size: 20px; color: #fff; margin: 0 0 5px 0; text-transform: uppercase; font-weight: bold; }
+        .member-name { font-size: 21px; color: #fff; margin: 0 0 5px 0; text-transform: uppercase; font-weight: bold; }
         .degree { font-size: 14px; color: #888; font-family: 'Share Tech Mono'; }
 
         .member-contact {
@@ -347,7 +349,7 @@
             gap: 15px;
             align-items: center;
         }
-        .member-email { font-size: 13px; color: #888; }
+        .member-email { font-size: 14px; color: #888; }
         .member-email:hover { color: var(--safe); }
 
         /* --- FOOTER --- */
@@ -432,7 +434,7 @@
         <div class="ui-layer">
             <header class="system-header">
                 <div class="mini-logo">
-                    4cT_JayHawk_1587 / SYS_ACTIVE
+                    <span class="live-text">SYS_ACTIVE // </span> JayHawk_USA 1776_07_04
                     <span class="time-text" id="sys-time">[ 00:00:00 ]</span>
                 </div>
                 
