preview_red fix

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <meta property="og:title" content="4cThreat | Airspace Intelligence">
     <meta property="og:description" content="Commercial-grade sensor fusion and asymmetric threat detection architecture. Overland Park, KS.">
-    <meta property="og:image" content="preview_red.jpg">
+    <meta property="og:image" content="preview_red.png">
     <meta property="og:url" content="https://4cthreat.com">
     <meta name="twitter:card" content="summary_large_image">
 
