--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>4cThreat Airspace Intelligence</title>
     
-    <meta property="og:title" content="4cThreat | Airspace Intelligence">
+    <meta name="description" content="Commercial-grade sensor fusion and asymmetric threat detection architecture. Global Remote Sensing Hub based in Overland Park, KS.">
+    <meta name="keywords" content="Airspace Intelligence, Drone Detection, Sensor Fusion, Counter-UAS, Defense Tech, 4cThreat">
+    <meta name="author" content="Hara Madhav Talasila">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="4cThreat Airspace Intelligence">
     <meta property="og:description" content="Commercial-grade sensor fusion and asymmetric threat detection architecture. Overland Park, KS.">
-    <meta property="og:image" content="preview_red.png">
+    <meta property="og:image" content="https://4cthreat.com/preview_red.png">
     <meta property="og:url" content="https://4cthreat.com">
+    <meta property="og:site_name" content="4cThreat">
+
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="4cThreat | Airspace Intelligence">
+    <meta name="twitter:description" content="Commercial-grade sensor fusion and asymmetric threat detection.">
+    <meta name="twitter:image" content="https://4cthreat.com/preview_red.png">
+    <meta name="twitter:image:alt" content="4cThreat Tactical Radar Interface">
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 64 64%22><circle cx=%2232%22 cy=%2232%22 r=%2228%22 stroke=%22%2300ff41%22 stroke-width=%224%22 fill=%22none%22/><path d=%22M32 4v56M4 32h56%22 stroke=%22%2300ff41%22 stroke-width=%224%22/><circle cx=%2232%22 cy=%2232%22 r=%228%22 fill=%22%2300ff41%22/></svg>">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Share+Tech+Mono&display=swap" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <style>
