--- a/index.html
+++ b/index.html
@@ -717,12 +717,12 @@
         <div class="section-title">Operations Directorate</div>
         <p class="section-subtitle">
             A unified command to deliver mission-critical intelligence. 
-            Decades of hands-on overlapping expertise in Sensors, Edge AI, and Hardware Architecture. 
+            Backed by decades of hands-on overlapping expertise in Sensors, Edge AI, and Hardware Architecture. 
         </p>
         
         <div class="team-grid">
             <div class="team-card">
-                <div class="role-badge">Lead Architect & Director</div>
+                <div class="role-badge">Founder & CEO</div>
                 <h3 class="member-name">Hara Madhav Talasila<span class="degree">, PhD</span></h3>
                 <div class="member-contact">
                     <a href="mailto:hara@4cThreat.com" class="member-email">hara@4cThreat.com</a>
@@ -731,7 +731,7 @@
             </div>
 
             <div class="team-card">
-                <div class="role-badge">Lead Scientist - AI & Vision</div>
+                <div class="role-badge">AI Scientist</div>
                 <h3 class="member-name">Soumyaroop Nandi<span class="degree">, PhD</span></h3>
                 <div class="member-contact">
                     <a href="mailto:nandi@4cThreat.com" class="member-email">nandi@4cThreat.com</a>
@@ -740,7 +740,7 @@
             </div>
 
             <div class="team-card">
-                <div class="role-badge">Co-Founder & Hardware Lead</div>
+                <div class="role-badge">Co-Founder & CTO (Hardware)</div>
                 <h3 class="member-name">Syed Faiz Ahmed</h3>
                 <div class="member-contact">
                     <a href="mailto:faiz@4cThreat.com" class="member-email">faiz@4cThreat.com</a>
@@ -748,10 +748,20 @@
             </div>
 
              <div class="team-card">
-                <div class="role-badge">Data Systems Lead</div>
+                <div class="role-badge">Algorithms Lead</div>
                 <h3 class="member-name">Akhilesh Mishra</h3>
                 <div class="member-contact">
                     <a href="mailto:akhilesh@4cThreat.com" class="member-email">akhilesh@4cThreat.com</a>
+                    <a href="https://www.linkedin.com/in/akhilesh-mishra-nvidia/" target="_blank" class="icon-link" style="font-size: 20px;"><i class="fab fa-linkedin"></i></a>
+                </div>
+            </div>
+
+            <div class="team-card">
+                <div class="role-badge">Software Architect</div>
+                <h3 class="member-name">Harshul Routhu</h3>
+                <div class="member-contact">
+                    <a href="mailto:harshul@4cThreat.com" class="member-email">harshul@4cThreat.com</a>
+                    <a href="https://www.linkedin.com/in/harshulr/" target="_blank" class="icon-link" style="font-size: 20px;"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
